2006-07-29 Jens Tkotz <jens@peino.de> 1.5.4-svn-b11

 * Fix: Order of captions was mixed in IE and Opera when given direct in the form.
	Fixed by using this.nextSibling in insertBefore()

2006-07-21 Jens Tkotz <jens@peino.de> 1.5.4-svn-b10

 * Fix: drawSelect in slideshow misbehaved and selected the wrong transition.

2006-07-12 Jens Tkotz <jens@peino.de> 1.5.4-svn-b9

 * Fix: Little warning in configwizard ; occured in first install.

2006-06-19 Jens Tkotz <jens@peino.de> 1.5.4-svn-b8

 * Fix: init_language() is not called redundant in init.php

 * Change: When user updates his language, the parent page is reloaded with the new language.

2006-06-19 Jens Tkotz <jens@peino.de> 1.5.4-svn-b7

 * PHP5 fix:
   In classes/Mail/htmlMimeMail.php and do_command.php was $HTTP_SERVER_VARS used,
   which is not longer present in PHP5

 * Fix: Correct use of $MIN_PHP_MAJOR_VERSION in lib/setup.php

 * SVN-Fix:
   Date of last change in Version.php was wrong extracted.
 
2006-05-10 Jens Tkotz <jens@peino.de> 1.5.4-svn-b6

 * Added php-gettext
   https://savannah.nongnu.org/projects/php-gettext/

2006-05-02 Jens Tkotz <jens@peino.de> 1.5.4-svn-b5

 * Updated and/or added $Id SVN Keywords.

2006-04-26 Jens Tkotz <jens@peino.de> 1.5.4-svn-b4

 * Fix: Often bots access the ecardform without having correct photo loaded etc.
        This leaves unnecessary Errormessage in Apaches logfile

   Thanks to Peter Schumacher from forums.

 * Fix: Only do userinput sanitation if value contains html tags.

 * FIX: Compressing an Image with having maximum filesize failed.
   Thanks to Scott Barnes (atomsmith) from forums.

 * FIX: Just compressing(no resize) an Image with NetPBM failed.

 * Changing Checks in setup to SVN.

2006-04-22 Jens Tkotz <jens@peino.de> 1.5.4-cvs-b3

 * Fix: Name of not logged in commenters was displayed as "anonymous" instead of entered name.
   Thanks to Mottie from forum.

2006-04-13 Jens Tkotz <jens@peino.de> 1.5.4-cvs-b2
